[package]
name = "ypm-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Language Package Manager Client"
repository = "https://github.com/ygg-lang/yggdrasil-package-manager"
#documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "1.0.147", features = ["derive"] }


[dependencies.yggdrasil-error]
#version = "0.1.2"
git = "https://github.com/ygg-lang/yggdrasil-rs"
rev = "02120884"
features = ["sled"]

[dev-dependencies]

[features]
default = []
